--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>TravelLodgeUi</title>
@@ -8,7 +9,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root></app-root>
+  <script src="https://js.stripe.com/v3/"></script>
+  <script type="text/javascript">
+    const stripe = Stripe('pk_test_51GykJhAIfTM5DUfXKDQEE5RtbCMg9GFpPeAsjCMYETyRqJLOV0vOLfwCZXMWrPkRoQQat5ZEMugJwkOToDugToBa00ZgJT6t4m');
+    const elements = stripe.elements();
+  </script>
 </body>
+
 </html>
